2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Optimise the bash command.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	Optimize elfeed db sync

	* init.el (+elfeed-db-sync): Add --no-block option.  Send
	notification on finish.
	(elfeed-db-unload-hook): Add `elfeed-db-gc-safe'.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Remove "--pipe" option.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Rename the log buffer to
	" *+elfeed-db-sync*".

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	Configure synchronization for elfeed

	* init.el: Load feeds.eld from `elfeed-db-directory'.
	(+elfeed-feeds-inhibit-save): New variable.
	(+elfeed-feeds-save): New function.  Called when `elfeed-feeds'	is changed.
	(+elfeed-db-sync): New function.  Synchronize the git repo for
	elfeed database. Called after `elfeed-db-gc'.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/vi-modeline.el (vi-modeline-apply): Prevent stack overflow.

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	Update secrets.el

	* site-lisp/secrets.el (secrets-open-session-functions): New variable
	(secrets-session-algorithm): Change to generic object.
	(secrets-session-aes-key): Remove variable.
	(secrets-algorithm-encrypt, secrets-algorithm-decrypt): New method.
	(secrets-open-session-plain)
	(secrets-open-session-dh-ietf1024-sha256-aes128-cbc-pkcs7): New functions.
	(secrets-open-session): Use `secrets-open-session-functions'.
	(secrets-close-session): Reset `secrets-session-algorithm'.
	(secrets-create-item): Use `secrets-algorithm-encrypt'.
	(secrets-get-secret): Use `secrets-algorithm-decrypt'.

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Remove copilot-chat.

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	Add `elfeed'

	* init.el (mode-specific-map): Bind E to `elfeed'.
	* packages.el (elfeed):

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	* transient/values.el (gptel-menu): Add --prune --tags to
	`magit-fetch'.

2025-06-16  Zhengyi Fu  <i@fuzy.me>
